--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,7 @@
     -2px -2px 10px 0px rgba(255, 255, 255, 0.1), 2px 2px 10px 0px rgba(0, 0, 0, 0.6);
   --timer-background-color: #1d1d1d;
   --light-txt: rgb(143, 143, 143);
-  --accent-blue: rgb(0, 61, 131);
+  --accent-blue: rgb(14, 140, 198);
 }
 * {
   margin: 0;
@@ -101,29 +101,20 @@ button:hover {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 145px;
-  height: 145px;
+  width: 142px;
+  height: 142px;
   border-radius: 50%;
   background-color: var(--timer-background-color);
   color: var(--light-txt);
 }
-.timer-hour,
-.timer-minute,
-.timer-seconds {
+.timer-time {
   font-family: 'Courier Prime', monospace;
+  font-size: 24px;
   line-height: 1;
   font-weight: 700;
   /* color: var(--light-txt); */
 }
-.timer-hour {
-  font-size: 36px;
-}
-.timer-minute {
-  font-size: 20px;
-}
-.timer-seconds {
-  font-size: 16px;
-}
+
 .controls,
 .add-time,
 .timer-control {
@@ -163,7 +154,7 @@ button:hover {
   bottom: 10px;
   right: 10px;
   font-size: 10px;
-  opacity: 0.15;
+  opacity: 0.35;
 }
 .clear-history:hover {
   color: var(--accent-blue);
@@ -181,8 +172,9 @@ button:hover {
   width: 20%;
 }
 .time-start,
-.time-end {
-  width: 40%;
+.time-end,
+.total-time {
+  flex: 1 1 auto;
 }
 .history-element > span {
   padding: 0px 5px;
@@ -202,6 +194,9 @@ button:hover {
   fill: rgb(29, 122, 29);
 }
 .btn.stop:hover svg {
+  fill: rgb(155, 31, 31);
+}
+.btn.reset:hover svg {
   fill: rgb(155, 31, 31);
 }
 
@@ -265,7 +260,7 @@ button:hover {
   .active {
     transform: translateY(0) rotateX(0) scaleX(1);
   }
-  .history-control{
+  .history-control {
     top: 250px;
     right: 10px;
     transform: rotate(0);
