--- a/styles/style.css
+++ b/styles/style.css
@@ -17,12 +17,12 @@ button:hover {
 .wrapper {
   display: flex;
   flex-direction: row;
-  width: 600px;
+  width: clamp(100%, 600px, 600px);
   height: 315px;
   margin: 0 auto;
   padding: 20px;
   justify-content: space-evenly;
-  perspective: 400px;
+  perspective: -250px;
   perspective-origin: 0 50%;
 }
 .timer,
@@ -70,15 +70,14 @@ button:hover {
   transform: translate(-120%) rotateY(90deg) scaleY(0.5);
   z-index: -1;
   transition: 0.4s;
-
 }
-.history-body{
+.history-body {
   height: 235px;
   overflow-y: scroll;
 }
 
 .history-body::-webkit-scrollbar {
-  width: 5px;/* ширина всієї смуги прокрутки */
+  width: 5px; /* ширина всієї смуги прокрутки */
 }
 .history-body::-webkit-scrollbar-track {
   background: var(--timer-background-color); /* колір скролінгової області */
@@ -164,28 +163,34 @@ button:hover {
   border: none;
   background-color: var(--timer-background-color);
   box-shadow: var(--timer-shadow);
+  transition: 0.3s;
+}
+.minus,
+.plus {
   font-size: 24px;
   line-height: 1;
   color: var(--light-txt);
-  transition: 0.3s;
 }
 .clear-history {
   position: absolute;
   width: 25px;
-  height: 25px; 
+  height: 25px;
   padding: 0 5px;
   top: 5px;
   right: 5px;
   z-index: 2;
-  opacity:0.35;
 }
-.clear-history svg{
-  fill: var(--light-txt);
+.clear-history svg {
+  width: 25px;
+  height: 25px;
+  fill: var(--accent-blue);
+}
+
+.clear-history:hover svg {
+  fill: var(--timer-background-color);
 }
 .clear-history:hover {
-  color: var(--timer-background-color);
   background-color: var(--light-txt);
-  opacity: 1;
 }
 .history-element {
   display: flex;
@@ -276,7 +281,7 @@ button:hover {
   .timer,
   .history {
     width: clamp(100%, 100%, 300px);
-    padding:10px 20px;
+    padding: 10px 20px;
     height: 290px;
   }
   .history {
