--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,13 @@
 button:hover {
   cursor: pointer;
 }
+.message {
+  width: 100%;
+  margin: 5px 0;
+  text-align: center;
+  color: red;
+  user-select: text;
+}
 .wrapper {
   display: flex;
   flex-direction: row;
